--- a/Trabalho Pos PAF/Trabalho Pos PAF/trabalhoposPAF.html
+++ b/Trabalho Pos PAF/Trabalho Pos PAF/trabalhoposPAF.html
@@ -8,10 +8,10 @@
   </head>
   <body>
   <h1 id="título1"> ♥ Restart ♥ </h1>
-  <br>
-  <p> Restart é uma banda brasileira de teen pop criada em agosto de 2008 em São Paulo. Em outubro de 2008 a banda lançou de forma independente um EP digital que levava o nome da banda, C4, com pouca repercussão na internet. No início de 2009 após uma reinvenção no estilo musical do grupo a banda lançou seu segundo EP digital, com as canções "Recomeçar", "Vou Cantar" e "Levo Comigo". Conseguindo assim em julho do mesmo ano fechar contrato com as pequenas gravadoras ArtMix, e Maynard Music e em setembro seguinte com a distribuidora Radar Records que um mês depois, em novembro, veio a lançar o disco de estreia da banda, também intitulado Restart.</p>
-  <p></p>
-
+  <div id= "texto1">
+    <p> Restart é uma banda brasileira de teen pop criada em agosto de 2008 em São Paulo. Em outubro de 2008 a banda lançou de forma independente um EP digital que levava o nome da banda, C4, com pouca repercussão na internet. No início de 2009 após uma reinvenção no estilo musical do grupo a banda lançou seu segundo EP digital, com as canções "Recomeçar", "Vou Cantar" e "Levo Comigo". Conseguindo assim em julho do mesmo ano fechar contrato com as pequenas gravadoras ArtMix, e Maynard Music e em setembro seguinte com a distribuidora Radar Records que um mês depois, em novembro, veio a lançar o disco de estreia da banda, também intitulado Restart.</p>
+  </div>
+  <a href= "GaleriaPosPAF.html"></a>
 
   </body>
 </html>
