--- a/trabalhoposPAF.html
+++ b/trabalhoposPAF.html
@@ -11,7 +11,13 @@
   <div id= "texto1">
     <p> Restart é uma banda brasileira de teen pop criada em agosto de 2008 em São Paulo. Em outubro de 2008 a banda lançou de forma independente um EP digital que levava o nome da banda, C4, com pouca repercussão na internet. No início de 2009 após uma reinvenção no estilo musical do grupo a banda lançou seu segundo EP digital, com as canções "Recomeçar", "Vou Cantar" e "Levo Comigo". Conseguindo assim em julho do mesmo ano fechar contrato com as pequenas gravadoras ArtMix, e Maynard Music e em setembro seguinte com a distribuidora Radar Records que um mês depois, em novembro, veio a lançar o disco de estreia da banda, também intitulado Restart.</p>
   </div>
-  <a href= "GaleriaPosPAF.html"></a>
+  <a href= "GaleriaPosPAF.html?codigo=PeLanza"> Pe Lanza </a>
+  <br>
+  <a href= "GaleriaPosPAF.html?codigo=PeLu"> PeLu </a>
+  <br>
+  <a href= "GaleriaPosPAF.html?codigo=Thomas"> Thomas </a>
+  <br>
+  <a href= "GaleriaPosPAF.html?codigo=Koba"> Koba </a>
 
   </body>
 </html>
